packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/upgrade-immutable-object-type-data-type.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if changing the data type of an object type is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="boolean"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" data-type="number:int"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
</edxml>
